# 6s_software_doc_design

./: README.md  pyproject.toml
software_doc_design/: app.py  data.csv  db.py
software_doc_design/controllers/: abstract_controller.py  comment_controller.py  course_controller.py  instructor_controller.py  rating_controller.py  specialization_controller.py  syllabus_controller.py  week_controller.py
software_doc_design/exceptions/: __init__.py
software_doc_design/models/: __init__.py  abstract_model.py  comment_model.py  course_model.py  instructor_model.py  rating_model.py  specialization_model.py  syllabus_model.py  week_model.py
software_doc_design/templates/: index.html
software_doc_design/templates/comment/: comment.html  comment_create.html  comment_update.html
software_doc_design/templates/course/: course.html  course_create.html  course_update.html
software_doc_design/templates/instructor/: instructor.html  instructor_create.html  instructor_update.html
software_doc_design/templates/rating/: rating.html  rating_create.html  rating_update.html
software_doc_design/templates/specialization/: specialization.html  specialization_create.html  specialization_update.html
software_doc_design/templates/syllabus/: syllabus.html  syllabus_create.html  syllabus_update.html
software_doc_design/templates/week/: week.html  week_create.html  week_update.html
software_doc_design/utils/: __init__.py
tests/: test_6s_software_doc_design.py
